set the repository to ignore .a files, .hex files, and the Release directory after all.  Once a project has the output suitable for publishing to the repository, then the file can be manually forced into the index using git add -f.  I think that is a decent workflow, so that the binaries are ignored by default, up until it is decided that they should be released.

--- a/.gitignore
+++ b/.gitignore
@@ -8,9 +8,9 @@
 # Object/Libraries/Binaries
 *.o
 *.d
-# *.a
+*.a
 *.elf
-# *.hex
+*.hex
 *.lss
 *.eep
 
@@ -54,7 +54,7 @@ local.properties
 # Build results
 
 [Dd]ebug/
-# [Rr]elease/
+[Rr]elease/
 x64/
 build/
 [Bb]in/
